fix: TypeaheadMultiple styling
The TypeaheadMultiple input is not as high as it was before and the tags
don't align in the middle anymore.

Fixed styling of TypeaheadMultiple to match the layout of the
TypeaheadSingle.

Closes #634

--- a/src/form/Typeahead/Typeahead.scss
+++ b/src/form/Typeahead/Typeahead.scss
@@ -13,10 +13,17 @@
 }
 
 .rbt-input-multi {
-  // By default the text is to close to the left so give it some space
-  // and it adds to much padding on the top, right and bottom so we
-  // remove it.
-  padding: 0 0 0 12px;
+  .rbt-input-wrapper {
+    margin: 0;
+
+    .tag {
+      height: auto;
+    }
+
+    .rbt-input-main {
+      margin: 0;
+    }
+  }
 
   // Remove border shadow on focus like we do for all inputs
   &.focus {
